--- a/jsbasket/assets/undex.html
+++ b/jsbasket/assets/undex.html
@@ -11,5 +11,24 @@
 </head>
 <body>
 
+<div id="header"></div>
+<div id="products"></div>
+<div id="shopping"></div>
+
+<!--Constants and Utils-->
+<script src="./css/constants/catalog.js"></script>
+<script src="./css/constants/root.js"></script>
+
+<!--Header-->
+<script src="./components/header/header.js"></script>
+<link rel="stylesheet" href="./components/header/header.css">
+
+<!--Products-->
+<script src="./components/header/products/products.js"></script>
+<link rel="stylesheet" href="./components/header/products/products.css">
+
+<!--Shopping-->
+<script src="./components/header/shopping/shop.js"></script>
+<link rel="stylesheet" href="./components/header/shopping/shop.css">
 </body>
 </html>
