--- a/jsbasket/assets/undex.html
+++ b/jsbasket/assets/undex.html
@@ -11,24 +11,18 @@
 </head>
 <body>
 
-<div id="header"></div>
-<div id="products"></div>
-<div id="shopping"></div>
+<div class="container">
+    <header>
+        <h1>Your Shopping Cart</h1>
+        <div class="shopping">
+            <img src="./img/Без названия (2).png" alt="">
+            <span class="quantity">0</span>
+        </div>
+       
 
-<!--Constants and Utils-->
-<script src="./css/constants/catalog.js"></script>
-<script src="./css/constants/root.js"></script>
+    </header>
+</div>
 
-<!--Header-->
-<script src="./components/header/header.js"></script>
-<link rel="stylesheet" href="./components/header/header.css">
-
-<!--Products-->
-<script src="./components/header/products/products.js"></script>
-<link rel="stylesheet" href="./components/header/products/products.css">
-
-<!--Shopping-->
-<script src="./components/header/shopping/shop.js"></script>
-<link rel="stylesheet" href="./components/header/shopping/shop.css">
+<script src="./css/js/script.js"></script>
 </body>
 </html>
