--- a/jsbasket/assets/undex.html
+++ b/jsbasket/assets/undex.html
@@ -15,14 +15,22 @@
     <header>
         <h1>Your Shopping Cart</h1>
         <div class="shopping">
-            <img src="./img/Без названия (2).png" alt="">
+            <img src="./img/1174408.png" alt="">
             <span class="quantity">0</span>
         </div>
        
 
     </header>
+    <div class="list"></div>
 </div>
-
+<div class="card">
+    <h1>card</h1>
+    <ul class="listCard"></ul>
+    <div class="cehkOut">
+        <div class="total">0</div>
+        <div class="closerShopping">Close</div>
+    </div>
+</div>
 <script src="./css/js/script.js"></script>
 </body>
 </html>
