--- a/jsbasket/assets/undex.html
+++ b/jsbasket/assets/undex.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./css/js/script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-16x16.png">
     <title>Document</title>
 </head>
 <body>
-
 <div class="container">
     <header>
         <h1>Your Shopping Cart</h1>
@@ -18,19 +14,18 @@
             <img src="./img/1174408.png" alt="">
             <span class="quantity">0</span>
         </div>
-       
-
     </header>
     <div class="list"></div>
 </div>
 <div class="card">
     <h1>card</h1>
     <ul class="listCard"></ul>
-    <div class="cehkOut">
+    <div class="cehckOut">
         <div class="total">0</div>
-        <div class="closerShopping">Close</div>
+        <div class="closeShopping">Close</div>
     </div>
 </div>
-<script src="./css/js/script.js"></script>
+
+<script src="./css/js/app.js"></script>
 </body>
 </html>
