--- a/jsbasket/assets/undex.html
+++ b/jsbasket/assets/undex.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Your Shopping Cart</h1>
         <div class="shopping">
-            <img src="./img/1174408.png" alt="">
+            <img src="./image/shopping.svg" alt="">
             <span class="quantity">0</span>
         </div>
     </header>
@@ -19,7 +19,9 @@
 </div>
 <div class="card">
     <h1>card</h1>
-    <ul class="listCard"></ul>
+    <ul class="listCard">
+
+    </ul>
     <div class="cehckOut">
         <div class="total">0</div>
         <div class="closeShopping">Close</div>
